# monkey-tail

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
benches/: trail_extraction.rs
config/: default.toml
docs/: buhera-conclave.tex  communication.tex  digital-preservation.md  goromigo.tex  implementation.md  monkey-tail.aux  monkey-tail.out  sighthound.tex  tail.md
monkey-tail-bindings/: Cargo.toml
monkey-tail-cli/: Cargo.toml
monkey-tail-cli/src/: integration.rs  lib.rs
monkey-tail-competency/: Cargo.toml
monkey-tail-competency/src/: assessor.rs  consensus.rs  lib.rs  models.rs  turbulance.rs
monkey-tail-core/: Cargo.toml
monkey-tail-core/src/: errors.rs  lib.rs  types.rs
monkey-tail-identity/: Cargo.toml
monkey-tail-identity/src/: lib.rs  patterns.rs  processor.rs  security.rs
monkey-tail-kambuzuma/: Cargo.toml
monkey-tail-kambuzuma/src/: adaptation.rs  bmd.rs  lib.rs  processor.rs
monkey-tail-sensors/: Cargo.toml
monkey-tail-trail-extraction/: Cargo.toml
src/: lib.rs  main.rs
