[workspace]
members = [
    "monkey-tail-core",
    "monkey-tail-sensors", 
    "monkey-tail-identity",
    "monkey-tail-kambuzuma",
    "monkey-tail-competency",
    "monkey-tail-cli"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
nalgebra = "0.32"
ndarray = "0.15"
rustfft = "6.0"
clap = { version = "4.0", features = ["derive"] }

[package]
name = "monkey-tail"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Ephemeral semantic digital identity system for consciousness-aware AI"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/monkey-tail"

[dependencies]
monkey-tail-core = { path = "monkey-tail-core" }
monkey-tail-sensors = { path = "monkey-tail-sensors" }
monkey-tail-identity = { path = "monkey-tail-identity" }
monkey-tail-kambuzuma = { path = "monkey-tail-kambuzuma" }
monkey-tail-competency = { path = "monkey-tail-competency" }
monkey-tail-cli = { path = "monkey-tail-cli" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "monkey-tail"
path = "src/main.rs"