[package]
name = "monkey-tail-cli"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Command-line interface for Monkey-Tail ephemeral identity framework"
license = "MIT"

[[bin]]
name = "monkey-tail"
path = "src/main.rs"

[dependencies]
monkey-tail-core = { path = "../monkey-tail-core" }
monkey-tail-sensors = { path = "../monkey-tail-sensors" }
monkey-tail-trail-extraction = { path = "../monkey-tail-trail-extraction" }
monkey-tail-identity = { path = "../monkey-tail-identity" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }