[package]
name = "monkey-tail-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for Monkey-Tail system demonstration"

[dependencies]
monkey-tail-core = { path = "../monkey-tail-core" }
monkey-tail-identity = { path = "../monkey-tail-identity" }
monkey-tail-kambuzuma = { path = "../monkey-tail-kambuzuma" }
monkey-tail-competency = { path = "../monkey-tail-competency" }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
