[package]
name = "monkey-tail-competency"
version = "0.1.0"
edition = "2021"
description = "Four-sided triangle competency assessment system"

[dependencies]
monkey-tail-core = { path = "../monkey-tail-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
