[package]
name = "monkey-tail-core"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Core types and traits for the Monkey-Tail ephemeral identity framework"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }